fixed a few minors bugs fixed bug with navigation not properly displayed on small screen

--- a/modules/PageMyself/public/themes/Hello/stylesheets/theme.css
+++ b/modules/PageMyself/public/themes/Hello/stylesheets/theme.css
@@ -114,6 +114,9 @@ body {
 
 .page-nav .show-more button:before {
   font-size: 24px;
+  height: 30px;
+  display: inline-flex;
+  align-items: center;
 }
 
 @keyframes nav-gelatine {
